# oxidized-xml

./: .gitignore  Cargo.toml  LICENSE  README.md
oxidized-xml-cli/: Cargo.toml
oxidized-xml-cli/src/: main.rs
oxidized-xml-cli/src/cli_parser/: mod.rs  options.rs  parse.rs
oxidized-xml-core/: Cargo.toml
oxidized-xml-core/src/: lib.rs
oxidized-xml-fetcher/: Cargo.toml
oxidized-xml-fetcher/src/: lib.rs
