[package]
name = "oxidized-xml-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxidized-xml-fetcher = { path = "../oxidized-xml-core" }
structopt = "0.3.26"
atty = "0.2.14"
clap = { version = "^4.3.16", features = [ "derive" ] }
